Fixes directors spacing from #329

--- a/src/scss/MainContent.scss
+++ b/src/scss/MainContent.scss
@@ -173,11 +173,15 @@
         padding-left: 15px;
       }
     }
+    
+    .directors {
+      justify-content: space-between;
+    }
 
     .cards-list {
       flex-direction: row;
       align-items: flex-start;
-      justify-content: space-between;
+      
 
       .card-item {
         margin-bottom: 15px;
